--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <img src="Clock.jpg" class="img-responsive">   
         </li>   
         <h5>Output on<b> Google Lens Project:</b>
-       <span></span>
+       <span>Analog Clock</span>
       </h5>
       <h5>Output on<b> MobileNet Model:</b>
-          <span></span>
+          <span>Analog Clock</span>
          </h5>
   
          <div class="mini_result">
-         <h4></h4>
+         <h4>Both the MobileNet and Google Lens are correct</h4>
          <hr>
          <h4></h4>
        </div> 
@@ -44,14 +44,14 @@
         <img src="cream.jpg" class="img-responsive">   
         </li>   
         <h5>Output on<b> Google Lens Project:</b>
-       <span></span>
+       <span>Nivea Cream</span>
       </h5>
       <h5>Output on<b> MobileNet Model:</b>
-          <span></span>
+          <span>Spotlight, Spot</span>
          </h5>
   
          <div class="mini_result">
-         <h4></h4>
+         <h4>Google Lens is more accurate</h4>
          <hr>
          <h4></h4>
        </div> 
@@ -63,14 +63,14 @@
         <img src="Iphone.jpg" class="img-responsive">   
         </li>   
         <h5>Output on<b> Google Lens Project:</b>
-       <span> </span>
+       <span>Phone</span>
       </h5>
       <h5>Output on<b> MobileNet Model:</b>
-          <span></span>
+          <span>Wallet, Billfold, Notecase, Pocketbook</span>
          </h5>
   
          <div class="mini_result">
-         <h4></h4>
+         <h4>Google Lens is more accurate</h4>
          <hr>
          <h4></h4>
        </div> 
@@ -82,14 +82,14 @@
         <img src="Shell.jpg" class="img-responsive">   
         </li>   
         <h5>Output on<b> Google Lens Project:</b>
-       <span></span>
+       <span>-</span>
       </h5>
       <h5>Output on<b> MobileNet Model:</b>
-          <span> </span>
+          <span>Snail </span>
          </h5>
   
          <div class="mini_result">
-         <h4></h4>
+         <h4>None of them are accurate</h4>
          <hr>
          <h4></h4>
        </div> 
@@ -101,16 +101,16 @@
         <img src="Cup.jpg" class="img-responsive">   
         </li>   
         <h5>Output on<b> Google Lens Project:</b>
-       <span></span>
+       <span>Utensil</span>
       </h5>
       <h5>Output on<b> MobileNet Model:</b>
-          <span></span>
+          <span>Cup</span>
          </h5>
   
          <div class="mini_result">
-         <h4></h4>
+         <h4>MobileNet is more accurate</h4>
          <hr>
-         <h4></h4>
+         <h4>I tested 5 images out of which MobileNet detected 2 correctly and Google Lens detected 3 correctly</h4>
        </div> 
       </div> 
      </ol>
